# StealthIMFileStorage

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: build.yml
proto/: filestorage.proto
src/stealthimfilestorage/: __main__.py  bind_server.py  config.py  config.sample.toml  errorcode.py  server.py  storage.py
src/stimfstool/: __main__.py
